fix: vertical-align da tabela

--- a/src/static/css/espera.css
+++ b/src/static/css/espera.css
@@ -1,6 +1,6 @@
 .table th,
 .table td {
-  vertical-align: middle;
+  vertical-align: middle !important;
   font: normal 900 1.2rem var(--font-principal), monospace;
 }
 th {
